CloudApp/K8s/local_cluster_setup/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springboot-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: springboot-app
  template:
    metadata:
      labels:
        app: springboot-app
    spec:
      containers:
      - name: springboot-app
        image: dharm117docker/springboot-app:1.0
        imagePullPolicy: Always
        ports:
        - containerPort: 9001

        volumeMounts:
        - name: log-volume
          mountPath: /app/logs

      volumes:
      - name: log-volume
        hostPath:
          path: /app/logs
          type: DirectoryOrCreate
