CloudApp/K8s/local_cluster_setup/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: springboot-service
spec:
  type: NodePort
  selector:
    app: springboot-app
  ports:
    - port: 80
      targetPort: 9001
      nodePort: 30007
