CloudApp/K8s/local_cluster_setup/k3d-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k3d-ingress
spec:
  ingressClassName: traefik
  rules:
  - host: debian.mydebian.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: springboot-service
            port:
              number: 80
