CloudApp/K8s/local_cluster_setup/kind-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
spec:
  ingressClassName: nginx   # 🔥 ADD THIS
  rules:
  - host: debian.mydebian.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: springboot-service
            port:
              number: 80
